Updated Alex Perry's email address.

--- a/Thanks
+++ b/Thanks
@@ -272,7 +272,7 @@ Robin Peel <robin@cpwd.com>
   aid database for the Flight Gear project as well as for X-Plane.
 
 
-Alex Perry <arp11@pacbell.net>
+Alex Perry <alex.perry@ieee.org>
   Contributed code to more accurately model VSI, DG, Altitude.
   Contributed to the Install and Getting Started manual.
 
