Minor property name change to track changes in xml panels.

--- a/Thanks
+++ b/Thanks
@@ -7,6 +7,11 @@ possible only by the help and hard work of others.  I want to properly
 credit everyone who has contributed to this project.
 
 
+A1 Free Sounds <techie@mail.ev1.net> http://www.a1freesoundeffects.com
+  Granted permission for the flightgear project to use some of the
+  sound effects from their site.
+
+
 Raul Alonzo <amil@las.es>
   Mr. Alonzo is the author of Ssystem and provided his kind permission 
   for using the moon texture. I also used parts of his code as a template
