--- a/Thanks
+++ b/Thanks
@@ -455,3 +455,6 @@ Curt L. Olson  <curt@flightgear.org>
 THE CONTENTS WERE LASTLY RESEARCHED AND UPDATED MARCH, 8 2000
 
 Oliver Delise  <delise@mail.isis.de>
+
+
+Updated 2001-12-11 by David Megginson, david@megginson.com
