--- a/NEWS
+++ b/NEWS
@@ -1,12 +1,54 @@
-New in 0.7.9
-* February 16, 2002
+New in 0.7.9pre2
+* February 13, 2002
 
-* MSVC fixes.
-* IRIX fixes.
-* FreeBSD fixes.
-* Mac OS X fixes.
-* Better cygwin and mingwin support.
-* Better support for gcc-3.0
+* JSBSim FGPiston mixture improvements
+* Enable Audio by default in MSVC builds
+* Added a clock freeze option.
+
+
+New in 0.7.9pre1
+* February 12, 2002
+
+* Switch to JSBSim (jsbsim.sf.net) as our default flight model.
+* Added additional aircraft: Cessna 182, Cessna 172 (ifr panel),
+  and a Cessna 310 (twin prop).
+* Added an entirely new set of flight dynamics modeling code by Andy Ross.
+  Includes several aircraft such as a 747, A4, and DC-3.
+  This is (Y)et (A)nother Flight Dynamics (Sim)ulator.  It is a first cut
+  of a "different take" on FDM design.  It's intended to be very simple
+  to use, producing reasonable results for aircraft of all sorts and sizes,
+  while maintaining simulation plausibility even in odd flight conditions
+  like spins and aerobatics.  It's at the point now where one can
+  actually fly the planes around.
+* Added an optional embedded http server that provides a property
+  manager interface to external programs and scripts.
+* Added an optional embedded http server that can serve out live
+  screen shots to anyone on the web.
+* Sync with the latest JSBSim code.
+* Added simple ATIS support.
+* More flexible autopilot that can be tuned per aircraft.
+* Many updates to the HUD to allow it to handle a much bigger set of
+  symbology and functionality
+* Support for back course ILS approaches.
+* Implimented DME ETE and speed.
+* Added support for rudder and aileron trim.
+* Many improvents with piston engine and propeller modeling.  Engine
+  startup procedures work, and engine guages work.
+* Added support for retractable gear.
+* Added 'master freeze' and 'fuel freeze' modes.  Would like to add
+  other freeze modes soon.
+* Added a 'high' level aircraft config file that specifies things like
+  the FDM code to use, the aircraft config file, the 3d model, the
+  instrument panel, autopilot config, etc.
+* Added a neat external 'chase' view control panel.
+* Added a GUI interface to the property manager system.
+* Moved keybinding definitions to a config file.
+* Many additions and improvements to the sound effects including
+  stall horn, tire squeek, ground rumble, wind noise, flaps, etc.
+* Enable introduction music in windows (off by default on all platforms)
+* Added support for the OpenGC glass cockpit project.
+* Added support for flying ILS approaches in both runway directions if the
+  same frequency is used in both cases.
 
 * Added an autogen.sh script for those compiling from CVS code.
 * Attempt to support more incompatible varients of the
@@ -52,48 +94,12 @@ New in 0.7.9
 * Make the tile cache system more tolerant of situations where the tile
   cache is full, but no entry qualifies for removal.
 
-* Switch to JSBSim (jsbsim.sf.net) as our default flight model.
-* Added additional aircraft: Cessna 182, Cessna 172 (ifr panel),
-  and a Cessna 310 (twin prop).
-* Added an entirely new set of flight dynamics modeling code by Andy Ross.
-  Includes several aircraft such as a 747, A4, and DC-3.
-  This is (Y)et (A)nother Flight Dynamics (Sim)ulator.  It is a first cut
-  of a "different take" on FDM design.  It's intended to be very simple
-  to use, producing reasonable results for aircraft of all sorts and sizes,
-  while maintaining simulation plausibility even in odd flight conditions
-  like spins and aerobatics.  It's at the point now where one can
-  actually fly the planes around.
-* Added an optional embedded http server that provides a property
-  manager interface to external programs and scripts.
-* Added an optional embedded http server that can serve out live
-  screen shots to anyone on the web.
-* Sync with the latest JSBSim code.
-* Added simple ATIS support.
-* More flexible autopilot that can be tuned per aircraft.
-* Many updates to the HUD to allow it to handle a much bigger set of
-  symbology and functionality
-* Support for back course ILS approaches.
-* Implimented DME ETE and speed.
-* Added support for rudder and aileron trim.
-* Many improvents with piston engine and propeller modeling.  Engine
-  startup procedures work, and engine guages work.
-* Added support for retractable gear.
-* Added 'master freeze' and 'fuel freeze' modes.  Would like to add
-  other freeze modes soon.
-* Added a 'high' level aircraft config file that specifies things like
-  the FDM code to use, the aircraft config file, the 3d model, the
-  instrument panel, autopilot config, etc.
-* Added a neat external 'chase' view control panel.
-* Added a GUI interface to the property manager system.
-* Moved keybinding definitions to a config file.
-* Many additions and improvements to the sound effects including
-  stall horn, tire squeek, ground rumble, wind noise, flaps, etc.
-* Enable introduction music in windows (off by default on all platforms)
-* Added support for the OpenGC glass cockpit project.
-* Added support for flying ILS approaches in both runway directions if the
-  same frequency is used in both cases.
-
-
+* MSVC fixes.
+* IRIX fixes.
+* FreeBSD fixes.
+* Mac OS X fixes.
+* Better cygwin and mingwin support.
+* Better support for gcc-3.0
 
 
 New in 0.7.8
