Updated Cameron's entry.

--- a/Thanks
+++ b/Thanks
@@ -232,7 +232,8 @@ Eric Mitchell <mitchell@mars.ark.com>
 
 Cameron Moore <lists@toad.bitstreet.net>
   Reigning list admin.
-  Provided our pages.
+  Provided man pages.
+  Self-proclaimed code janitor.
 
 
 Anders Morken <amrken@online.no>
