Fixed an email address.

--- a/Thanks
+++ b/Thanks
@@ -230,7 +230,7 @@ Eric Mitchell <mitchell@mars.ark.com>
   all original creations.
 
 
-Cameron Moore <lists@toad.bitstreet.net>
+Cameron Moore <cameron@unbeatenpath.net>
   Reigning list admin.
   Provided man pages.
   Self-proclaimed code janitor.
