--- a/Thanks
+++ b/Thanks
@@ -130,6 +130,9 @@ Bruce Finney <bfinney@gte.net>
 
 
 Melchior Franz <a8603365@unet.univie.ac.at>
+  Made that joystick high/low support for joystick hats.
+  Created the led.txf font.
+  Made some improvements of the telnet and the http interface.
   Ruthlessly hunted down memory leaks in FlightGear, SimGear, and JSBSim.
 
 
