Updated Cameron's entry.

--- a/Thanks
+++ b/Thanks
@@ -245,6 +245,7 @@ Cameron Moore <cameron@unbeatenpath.net>
   Reigning list admin.
   Provided man pages.
   Self-proclaimed code janitor.
+  FAQ maintainer.
 
 
 Anders Morken <amrken@online.no>
