Updated for next release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,85 @@
+New in 0.7.11pre1
+* August 31, 2002
+
+* The world is now populated with random ground objects with
+  apropriate type and density for the local ground cover type
+  (buildings, water towers, farm houses, silos, cows, trees, etc.)
+* Many (most?) ground textures updated for a much nicer, more coherent,
+  more realistic overall look and feel.
+* Added a java client library for FlightGear.
+* Added some external scripting examples (python.)
+* Implimented a Bendix/King KT 70 transponder.
+* Implimented a Bendix/King KR 87 adf.
+* Added support for 3d instrument panels inside 3d cockpits.
+* Added support for animation of 3d models tied to internal properties.
+* New/updated aircraft include: Cessna 172, Piper J3 Cub, DC-3, A4
+  Skyhawk, Cessna 310, 747, 1903 Wright Flyer (non-linear with stall
+  modeled, based on wind tunnel data.)
+* Convert the magic carpet into a UFO, complete with sound effects and
+  a 3d model (based on real world data of course.) :-)
+* Environment manager overhaul
+* Support for a base wind speed with gusts.
+* Support for a base wind direction with variation.
+* Support for more dynamically reconfigurable cloud layers.  Cloud
+  layers are no longer hard coded.
+
+* Updates and additions to the FAQ
+* Improvements to the sound effects module.
+* Autopilot fixes to allow it to work much better on large airliners.
+* Added a generic interface for running the flight dynamics model as a
+  seperate process communicating via a network connection.
+* Synced with the latest JSBSim code.
+* Synced with the latest UIUCmodel code.
+* Many fixes and updates to the YASim FDM (fixed flap drag issue, new
+  tail wheel lock, lots of solver fixes, and fixes to other internal
+  stuff.)
+* Added support for menus defined in an xml file.
+* Make the help system start more robustly/quickly in Win32
+* Added support for detecting the name of a joystick and using the
+  appropriate default joystick config file.
+* Overhauled the remote/network property interface.
+* Added a --show-aircraft option to dump out a list of all the
+  available aircraft you can select with the --aircraft=NAME option.
+* Added a --random-wind command line option.
+* --wind= option can now contain ranges,
+  i.e. --wind=min_dir:max_dir@min_speed:max_speed; the system will
+  automatically vary the wind within these ranges.
+* A "physical" crash (i.e. too-hard impact with the ground) causes the
+  sim to freeze.  You can then reset the sim to the starting state
+  with the menu->reset option.
+
+* Support in the scenery tile cache for maintaining tiles in the cache
+  relative to several view points that could be *very* far apart.
+* Brake makes the magic carpet fly backwards.
+* Many clean ups, fixes, and improvements with the tile pager.  Memory free
+  is now done incrementally and spread out through multiple frames to hide it.
+* Modernized the autoconf/make scripts.
+* Cleaned up old cruft from the build system.
+* Default to using FGEnvironment
+* Removed support for efence (in favor of valgrind.)
+* Bumped minimum plib version required up to 1.4.2, however the latest
+  cvs (and hopefully release) works much better.
+* Added valgrind debugging config files/scripts.
+* Weeded out many warnings/errors flaged by valgrind.
+* Overhauled the FGSubsystem class.
+* Fixed reporting of winds, cloundbase and altimeter setting.
+* FGSteam converted to a proper FGSubsystem.
+* Fix fog on 3dfx cards.
+* Added internal support for turning each tank on/off individually.
+* Added support for a fuel selector switch.
+* Fixes to builtin property browser.
+* Fixed several math overflow problems with time elapsed calculations
+  that had crept in.  Thes would cause some things to stop updating
+  (like portions of the instrument panel, and radio station frequency
+  matching.)
+* Updates to the network OpenGC interface.
+
+* Irix fixes.
+* Mac OS X fixes.
+* MSVC fixes.
+* IA-64 w/ Intel compiler fixes.
+
+
 New in 0.7.10
 * April 20, 2002
 
